--- a/#src/scss/main/forms.scss
+++ b/#src/scss/main/forms.scss
@@ -123,7 +123,7 @@
 }
 
 
-/* Quick shoing
+/* Quick showing
 ---------------------------------------------------------------*/
 .quick {
     padding: 10px 15px 10px 30px;
