--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -17,8 +17,8 @@
 @import 'footer';
 @import 'modal';
 @import 'topics';
-@import 'topnews';
-@import 'daynews';
+@import 'top-news';
+@import 'day-news';
 @import 'big-post';
 @import 'post';
 @import 'hours-news';
