--- a/#src/scss/post.scss
+++ b/#src/scss/post.scss
@@ -4,7 +4,6 @@
 .post {
     position: relative;
     padding: var(--m-padding);
-    height: 100%;
 
     border-right: 1px solid #dcdcdc;
     border-bottom: 1px solid #dcdcdc;
@@ -12,10 +11,17 @@
     &:hover {
         background-color: rgba(#fff, .5);
     }
+    @media(max-width: 575px) {
+        border: none;
+        padding-bottom: 30px;
+    }
     // .post__photo
     &__photo {
         height: 170px;
         margin-bottom: 15px;
+        @media(max-width: 575px) {
+            height: 320px;
+        }
     }
     // .post__lk
     &__lk {
