--- a/#src/scss/big-post.scss
+++ b/#src/scss/big-post.scss
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    min-height: 500px;
+    min-height: 480px;
     padding-top: 80px;
 
     background-color: #000;
@@ -43,6 +43,9 @@
     // .big-post__title
     &__title {
         margin-bottom: 10px;
+        @media(max-width: 420px) {
+            font-size: 35px;
+        }
     }
     // .big-post__desc
     &__desc {
