--- a/#src/scss/topics.scss
+++ b/#src/scss/topics.scss
@@ -10,10 +10,9 @@
         flex: 0 0 25%;
 
         overflow: hidden;
-        border-right: 1px solid #dcdcdc;
-        border-left: 1px solid #dcdcdc;
+        outline: 1px solid #dcdcdc;
         @media(max-width: 1240px) {
-           flex: 0 0 30%;
+           flex: 0 0 35%;
         }
         @media(max-width: 767px) {
            flex: 0 1 auto;
