started gellery section

--- a/#src/scss/big-post.scss
+++ b/#src/scss/big-post.scss
@@ -25,11 +25,20 @@
             background: rgb(255,255,255);
             background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(0,0,0,0.3) 100%);
         }
+        &::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 2;
+        }
     }
     // .big-post__content
     &__content {
         display: block;
-        z-index: 2;
+        z-index: 1;
         @include hover($text: #fff);
         &:focus {
             outline-offset: -2px;
@@ -43,9 +52,24 @@
     // .big-post__title
     &__title {
         margin-bottom: 10px;
+        padding: 0 var(--m-padding);
+
+        color: #fff;
+        font-size: 44px;
+        font-family: "Hoefler-Text", serif;
         @media(max-width: 420px) {
             font-size: 35px;
         }
+    }
+    // .big-post__watch-time
+    &__watch-time {
+       position: absolute;
+       top: 0;
+       left: 275px;
+
+       color: #fff;
+       transform: translateY(-40%);
+       font-size: 14px;
     }
     // .big-post__desc
     &__desc {
@@ -61,7 +85,7 @@
     }
     // .big-post__footer
     &__footer {   
-        z-index: 1;  
+        z-index: 3;  
         display: flex;
         height: 60px;
     }
@@ -87,6 +111,13 @@
         @media(max-width: 420px) {
             font-size: 0;
             background-position: center;
+        }
+    }
+    &--gallery {
+        height: 100%;
+        border: none;
+        .big-post__desc {
+            border-bottom: none;
         }
     }
 }
