--- a/#src/scss/middle.scss
+++ b/#src/scss/middle.scss
@@ -7,9 +7,9 @@
     background-color: #fff;
     // .middle__column
     &__column {
-        flex: 0 1 50%;
-        &:first-child {
-            flex: 0 1 80%;
+        flex: 0 1 80%;
+        &:last-child {
+            flex: 0 0 420px;
         }
     }
 }
