--- a/#src/scss/post.scss
+++ b/#src/scss/post.scss
@@ -35,12 +35,12 @@
             width: 100%;
             height: 100%;
         }
-        @include hover;
-        &:hover {
-            .post__title,
-            & ~ .article-text {
-                color: #b90903;
-            }
+        &:focus {
+            outline: none;
+        }
+        &:focus:focus-visible::after {
+            outline: 2px solid red;
+            outline-offset: -2px;
         }
     }
     // .post__info
@@ -62,14 +62,7 @@
         padding-top: 25px;
         padding-bottom: 10px;
         border: none;
-        .post__lk:hover {
-            .post__title,
-            & ~ .article-text {
-                color: #000;
-            }
-        }
-        &:hover,
-        &:focus {
+        &:hover {
             background-color: #f5f5f5;
         }
     }
