--- a/#src/scss/gallery.scss
+++ b/#src/scss/gallery.scss
@@ -20,6 +20,16 @@
         @supports not (backdrop-filter: blur(20px)) {
            background: rgba(#000, .5);
         }
+        overflow: auto;
+        @media(max-width: 767px) {
+            width: 120px;
+        }
+        @media(max-width: 575px) {
+           left: 0;
+           bottom: 0;
+           width: 100%;
+           height: 120px;
+        }
     }
     // .gallery__list
     &__list {
@@ -33,9 +43,17 @@
 
         list-style: none;
         text-align: center;
+        @media(max-width: 575px) {
+            flex-direction: row;
+        }
     }
     // .gallery__item
-    &__item {}
+    &__item {
+        margin-bottom: 30px;
+        &:last-child {
+            margin: 0;
+        }
+    }
     // .gallery__btn
     &__btn {
         position: relative;
@@ -51,7 +69,10 @@
         cursor: pointer;
         overflow: hidden;
         background: black;
-        
+        @media(max-width: 1050px) {
+           width: 60px;
+           height: 60px;
+        }
         // .gallery__btn--active
         &--active {
             border: 2px solid #b11217;
@@ -88,17 +109,20 @@
     &__dsc {
         display: inline-block;
         color: #fff;
+        @media(max-width: 1050px) {
+            font-size: 12px;
+        }
     }
     // .gallery__lk
     &__lk {
-        display: inline-block;
-        height: 30px;
-        padding: 0 15px;
+        display: inline-flex;
+        align-items: center;
+        min-height: 30px;
+        padding: 5px 15px;
 
         color: #fff;
         font-size: 12px;
         text-align: center;
-        line-height: 30px;
 
         border-radius: 20px;
         background-color: rgba(#fff, .4);
