--- a/#src/scss/main/forms.scss
+++ b/#src/scss/main/forms.scss
@@ -7,6 +7,7 @@
     color: #000;
     font-size: 16px;
     font-weight: 500;
+    line-height: 1.1;
     transition: color .3s;
     // .title--hot
     &--hot {
