--- a/#src/scss/main/forms.scss
+++ b/#src/scss/main/forms.scss
@@ -7,7 +7,7 @@
     color: #000;
     font-size: 16px;
     font-weight: 500;
-    line-height: 1.1;
+    line-height: 1.3;
     transition: color .3s;
     // .title--hot
     &--hot {
@@ -23,7 +23,7 @@
         }
     }
     &--video {
-        padding-top: .6em !important;
+        padding: 30px var(--m-padding) 0 !important;
         &::after {
             content: '';
             position: absolute;
@@ -40,13 +40,15 @@
             content: '';
             position: absolute;
             top: 0;
-            left:  calc(var(--m-padding) + 35px);
+            left:  65px;
 
             width: 200px;
             height: 3px;
             background-image: linear-gradient(to right, #b11217 30%, rgba(#fff, .3) 30%);
             transition: background .3s;
-            
+            @media(max-width: 1020px) {
+                left: 50px;
+            }
         }
     }
 }
@@ -68,7 +70,7 @@
     font-weight: 700;
     text-transform: uppercase;
 
-    border: none;
+    border: 1px solid rgba(#000, .1);
     border-radius: 30px;
     outline: none;
     cursor: pointer;
@@ -77,11 +79,16 @@
     @media(min-width: 768px) {
         &:hover,
         &:focus {
-            box-shadow: 0 0 10px #999;
+            box-shadow: 2px 2px 4px #a0a0a0;
         }  
     }
+    &--more {
+        margin-left: 50%;
+        transform: translateX(-50%);
+        text-transform: initial;
+        border-radius: 2px;
+    }
 }
-
 
 /* Article info
 ---------------------------------------------------------------*/
@@ -113,18 +120,22 @@
 
         background: url('../img/icons/ico_clock.png') left center  no-repeat;
     }
-    // .article-info__author
-    &__author {
-        margin: 0;
-        padding-left: 20px;
-
-        background: url('../../img/icons/author.png') left center no-repeat;
-    }
     &--big {
         color: rgba(255, 255, 255, 0.705);
     }
 }
 
+/* Author
+---------------------------------------------------------------*/
+.author {
+    display: inline-block;
+    margin: 0;
+    padding-left: 20px;
+
+    font-size: 12px;
+    font-family: FiraSans, sans-serif;
+    background: url('../../img/icons/author.png') left center no-repeat;
+}
 
 /* Article text
 ---------------------------------------------------------------*/
@@ -145,7 +156,6 @@
         background: url('../img/icons/comment.png') left center no-repeat;
     }
 }
-
 
 /* Quick showing
 ---------------------------------------------------------------*/
