--- a/#src/scss/post.scss
+++ b/#src/scss/post.scss
@@ -3,30 +3,26 @@
 ----------------------------------------------------------------*/
 .post {
     position: relative;
-    padding: var(--m-padding);
-
-    border-right: 1px solid #dcdcdc;
-    border-bottom: 1px solid #dcdcdc;
-    transition: background .3s;
+    box-shadow: 2px 2px 8px rgba(#000, .1);
+    background-color: #fff;
     &:hover {
-        background-color: rgba(#fff, .5);
+        box-shadow: 2px 2px 8px rgba(#000, .5);
     }
-    @media(max-width: 575px) {
-        border: none;
-        padding-bottom: 30px;
+    transition: box-shadow .3s;
+    // .post__content
+    &__content {
+        padding: var(--m-padding);
+        padding-top: 0;
     }
     // .post__photo
     &__photo {
-        height: 170px;
+        height: 180px;
         margin-bottom: 15px;
-        @media(max-width: 575px) {
-            height: 180px;
-        }
     }
     // .post__lk
     &__lk {
         display: block;
-        margin-bottom: 5px;
+        margin-bottom: 8px;
         &::after {
             content: '';
             position: absolute;
@@ -59,11 +55,28 @@
     }
     // .post--actual
     &--actual {
-        padding-top: 25px;
-        padding-bottom: 10px;
+        padding: 25px var(--m-padding) 10px;
         border: none;
+        box-shadow: none;
         &:hover {
             background-color: #f5f5f5;
+            box-shadow: none;
+        }
+    }
+    &--top {
+        padding: var(--m-padding);
+
+        border-right: 1px solid #dcdcdc;
+        border-bottom: 1px solid #dcdcdc;
+        box-shadow: none;
+        transition: background .3s;
+        &:hover {
+            background-color: rgba(#fff, .5);
+            box-shadow: none;
+        }
+        @media(max-width: 575px) {
+            border: none;
+            padding-bottom: 30px;
         }
     }
 }
