--- a/#src/scss/articles.scss
+++ b/#src/scss/articles.scss
@@ -29,7 +29,7 @@
 
 .selected {
     display: block;
-    transition: top .5s, left .5s;
+    transition: top .5s, left .5s, box-shadow .3s;
 }
 
 .disabled {
