--- a/#src/scss/big-post.scss
+++ b/#src/scss/big-post.scss
@@ -4,17 +4,8 @@
 .big-post {
     grid-area: big-post;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    min-height: 480px;
-    padding-top: 80px;
-
     border-bottom: 1px solid #dcdcdc;
     background-color: #000;
-    @media(max-width: 575px) {
-        min-height: 430px;
-    }
     // .big-post__photo
     &__photo {
         &::after {
@@ -37,19 +28,22 @@
             height: 100%;
             z-index: 2;
         }
-        &:focus::after {
+        &.focus-visible::after {
             outline: 2px solid red;
             outline-offset: -2px;
         }
     }
     // .big-post__content
     &__content {
-        display: block;
-        z-index: 1;
-        @include hover($text: #fff);
-        &:focus {
-            text-decoration: underline;
-            outline: none;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        height: 100%;
+        min-height: 480px;
+        padding-top: 80px;
+        @media(max-width: 575px) {
+            min-height: 430px;
         }
     }
     // .big-post__about
@@ -70,7 +64,7 @@
             font-size: 35px;
         }
         @media(max-width: 420px) {
-            font-size: 26px;
+            font-size: 28px;
         }
     }
     // .big-post__watch-time
@@ -100,7 +94,7 @@
     }
     // .big-post__footer
     &__footer {   
-        z-index: 3;  
+        position: relative;  
         display: flex;
         height: 60px;
     }
@@ -130,7 +124,7 @@
     }
     &--gallery {
         height: 100%;
-
+        padding-right: 140px;
         border: none;
         .big-post__desc {
             border-bottom: none;
@@ -141,12 +135,13 @@
         }
         .big-post__photo.focus-visible::before {
             background-color: rgba(#000, .3);
-            border: 2px solid #fff
+            border: 2px solid #86070b
         }
-        @media(min-width: 576px) {
+        @media(max-width: 767px) {
             padding-right: 120px;
         }
         @media(max-width: 575px) {
+            padding-right: 0;
             padding-bottom: 100px;
             .big-post__desc {
                 display: none;
@@ -159,7 +154,6 @@
             box-shadow: 2px 2px 8px rgba(#000, .5);
         }
         transition: box-shadow .3s;
-
         .big-post__footer {
             height: auto;
             padding: 15px var(--m-padding);
@@ -167,7 +161,6 @@
             color: #fff;
             border-top: 1px solid #4e4d4d;
         }
-    
         .big-post__title {
             font-size: 35px;
         }
