rename articles, articles__nav to publications and post , big-bost to article

--- a/#src/scss/actual.scss
+++ b/#src/scss/actual.scss
@@ -20,7 +20,7 @@
     // .actual__row
     &__row {
         &:last-child {
-            .post {
+            .article {
                 padding-bottom: 20px;
             }
         }
