--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -19,13 +19,13 @@
 @import 'topics';
 @import 'top-news';
 @import 'day-news';
-@import 'big-post';
-@import 'post';
+@import 'big-article';
+@import 'article';
 @import 'hours-news';
 @import 'middle';
 @import 'actual';
 @import 'gallery';
-@import 'articles';
+@import 'publications';
 @import 'lk-article';
-@import 'articles-nav';
+@import 'publications-nav';
 
