--- a/#src/scss/publications-nav.scss
+++ b/#src/scss/publications-nav.scss
@@ -1,24 +1,24 @@
 /*----------------------------------------------------------------
-    Articles-nav
+    Publications-nav
 ----------------------------------------------------------------*/
-.articles {
-    // .articles__nav
+.publications {
+    // .publications__nav
     &__nav {
         padding-bottom: 30px;
         overflow-x: auto;
     }
-    // .articles__list
+    // .publications__list
     &__list {
         display: flex;
         margin: 0;
         padding: 0;
         list-style: none;
     }
-    // .articles__item
+    // .publications__item
     &__item {
         flex-grow: 1;
     }
-    // .articles__btn
+    // .publications__btn
     &__btn {
         position: relative;
         padding: 20px 25px;
@@ -33,8 +33,8 @@
         border-bottom: 1px solid #92929259;
         background-color: transparent;
         transition: background .1s;
-        &:hover:not(.articles__btn--active),
-        &.focus-visible:not(.articles__btn--active) {
+        &:hover:not(.publications__btn--active),
+        &.focus-visible:not(.publications__btn--active) {
             background-color: #fff;
         }
         &::after {
