--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -14,12 +14,11 @@
 		flex-direction: column;
 		align-items: center;
 		width: 80px;
-		height: 950px;
-		max-height: 100vh;
+		height: clamp(500px, 950px, 100vh);
 		padding: 30px 0;
 
 		background-color: #b11217;
-		transition: top .6s ease-out;
+		transition: top .3s ease-out;
 		@media(max-width: 1535px) {
 			width: 60px
 		}
