--- a/#src/scss/main-nav.scss
+++ b/#src/scss/main-nav.scss
@@ -75,7 +75,7 @@
     &__wrapper {
         display: flex;
         flex-direction: column;
-        height: 100vh;
+        // height: 100vh;
         overflow-y: auto;
         padding: 35px 80px 30px;
         @media(min-width: 768px) {
