--- a/#src/scss/top-news.scss
+++ b/#src/scss/top-news.scss
@@ -87,7 +87,7 @@
     // .top-news__lk
     &__lk {
         display: inline-block;
-    
+
         color: #000;
         font-weight: 500;
         line-height: 1.3;
@@ -109,6 +109,9 @@
         padding: 0;
         @media(max-width: 1050px) {
             display: block;
+        }
+        .top-news__lk {
+            padding: 0 15px;
         }
     }
     // .top-news__pagination
