--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -27,7 +27,7 @@
 			flex-direction: row;
 			justify-content: space-between;
 			width: 100%;
-			height: 80px;
+			height: 60px;
 			padding: 0 30px;
 		}
 		@media(max-width: 767px) {
@@ -50,6 +50,7 @@
 	&__logo {
 		@media(max-width: 1240px) {
 			display: inline-block;
+			font-size: 35px;
 		}
 		@media(max-width: 420px) {
 			font-size: 29px;
