--- a/#src/scss/main-nav.scss
+++ b/#src/scss/main-nav.scss
@@ -8,12 +8,14 @@
     z-index: 999;
     display: none;
     width: 100%;
+    max-height: 100vh;
    
     background: #b11217;
     opacity: 0;
     transition: opacity .3s;
+    overflow-y: auto;
     &.active {
-        top: 80px;
+        top: 60px;
         opacity: 1;
     }
     @media(max-width: 1240px) {
@@ -75,8 +77,6 @@
     &__wrapper {
         display: flex;
         flex-direction: column;
-        // height: 100vh;
-        overflow-y: auto;
         padding: 35px 80px 30px;
         @media(min-width: 768px) {
             border-top:  1px solid #c2464a;
