--- a/#src/scss/top-news.scss
+++ b/#src/scss/top-news.scss
@@ -112,12 +112,15 @@
         }
         .top-news__lk {
             padding: 0 15px;
+            @media(max-width: 420px) {
+                font-size: 14px;
+            }
         }
     }
     // .top-news__pagination
     &__pagination {
         position: absolute;
-        bottom: 15px;
+        bottom: 12px;
         left: 50%;
         width: 100%;
 
@@ -127,14 +130,16 @@
             display: inline-block;
             margin-right: 5px;
             width: 27px;
-            height: 4px;
+            height: 3px;
             background-color: rgba(#fff, .5);
+            opacity: .5;
             &:last-child {
                 margin: 0;
             }
         }
         .swiper-pagination-bullet-active {
             background-color: #fff;
+            opacity: .8;
         }
     }
 }
