--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -23,7 +23,7 @@
 			width: 60px
 		}
 		@media(max-width: 1240px) {
-			position: static;
+			position: relative;
 			flex-direction: row;
 			justify-content: space-between;
 			width: 100%;
@@ -302,6 +302,21 @@
 		fill: #f4dedf;
 		pointer-events: none;
 	}
+	// .main-header__overlay
+    &__overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 50;
+
+		display: none;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(#000, 0.5);
+        &--active {
+			display: block;
+        }
+    }
 }
 
 
