--- a/#src/scss/rubrics.scss
+++ b/#src/scss/rubrics.scss
@@ -46,6 +46,7 @@
 		.rubrics__link {
 			color: #fff;
 			font-size: 28px;
+			font-weight: 400;
 			&:focus {
 				outline: 2px solid #ffda4a;
 				outline-offset: 2px;
