--- a/#src/scss/modal.scss
+++ b/#src/scss/modal.scss
@@ -11,7 +11,6 @@
     max-height: 100vh;
      // .modal__content
      &__content {
-        height: 100%;
         overflow-y: auto;
     }
     &__close {
@@ -38,24 +37,16 @@
         display: block;
     }
     &--search {
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-
-        background-color: transparent;
-        // 
+        padding: 80px 40px 30px;
+        transform: translate(-50%, -50%);
+        background-color: rgba(#b11217, .5);
+        border-radius: 10px;
+        
         .modal__close{
             position: fixed;
-            top: 25px;
-            right: 25px;
-        }
-        // .modal__content
-        .modal__content {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
+            top: 10px;
+            right: 10px;
+            opacity: .5;
         }
     }
 }
@@ -70,8 +61,7 @@
 	width: 100%; 
 	height: 100%;
 
-	background-color: rgba(rgb(14, 0, 0), .85);
-	transition: opacity .3s;
+	background-color: rgba(#000, .9);
 	&.active {
 		display: block;
 	}
