added authors columns block

--- a/#src/scss/article.scss
+++ b/#src/scss/article.scss
@@ -39,8 +39,8 @@
             outline-offset: -2px;
         }
     }
-    // .article__info
-    &__info {
+    // .article__about
+    &__about {
         margin-bottom: 15px;
         color: rgb(49, 49, 49);
     }
