--- a/#src/scss/subject.scss
+++ b/#src/scss/subject.scss
@@ -56,11 +56,12 @@
     }
     // .subject__title
     &__title {
-        margin: 0;
+        margin: 0 0 10px;
         font-size: 32px;
         font-weight: 400;
+        line-height: 1.1;
         @media(max-width: 1050px) {
-            font-size: 28px;
+            font-size: 24px;
         }
     }
     // .subject__lk
@@ -70,7 +71,10 @@
     }
     // .subject__about
     &__about {
-        margin-bottom: 25px;
+        margin-bottom: 30px;
+        @media(max-width: 1050px) {
+            margin: 0;
+        }
     }
     // .subject__text
     &__text {
