--- a/#src/scss/root.scss
+++ b/#src/scss/root.scss
@@ -6,5 +6,9 @@
     @media(max-width: 1020px) {
         --m-padding: 15px;
     }
+    --l-padding: 50px;
+    @media(max-width: 1020px) {
+        --m-padding: 25px;
+    }
 }
 
