--- a/#src/scss/day-news.scss
+++ b/#src/scss/day-news.scss
@@ -50,5 +50,9 @@
     }
     &--post {
         grid-area: initial;
+        display: none;
+        @media(min-width: 1050px) {
+            display: block;
+        }
     }
 }
