--- a/#src/scss/main/forms.scss
+++ b/#src/scss/main/forms.scss
@@ -60,8 +60,9 @@
     justify-content: center;
     align-items: center;
 
+    min-width: 200px;
     height: 45px;
-    padding: 0 50px;
+    padding: 0 15px;
 
     color: #333;
     font-family: 'Ubuntu', sans-serif;
